--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html>
+    
     <head>
         <link rel="stylesheet" href="{{ url_for('static',filename='styles/global-style.css') }}">
     </head>
@@ -7,71 +9,106 @@
     <body>
         
         <div class="top-border">
-            <div class="rosen-logo">
-                <br>
-                <img src="{{url_for('static', filename='images/ROSEN_Logo_White_220.png')}}" id="logo">
+            <br>
+            <div class="rosen">
+                <a href=index>
+                    <img src="{{url_for('static', filename='images/ROSEN_Logo_White_220.png')}}" id="logo" class="rosen-logo">
+                </a>
             </div>
         </div>
 
 
 
+        <br>
+        <div class="label-message">
+            <b>Label Images<b>
+        </div>
+        <br>
+
+
+
         <div class="images">
             <div class="image-box">
-                <img src="{{url_for('static', filename='images/fish.png')}}" width="240px" height="240px">
+                <div class="image">
+                    <img src="{{url_for('static', filename='images/fish.png')}}" width="240px" height="240px">
+                </div>
+                <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                </button>
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="{{url_for('static', filename='images/x-button.png')}}">
+                        <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
                     </button>
                     <button class="check-button">
-                        <img src="{{url_for('static', filename='images/check-button.png')}}">
+                        <img src="{{url_for('static', filename='images/check-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/check-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/check-button.svg')}}'" width="55px" height="55px">
                     </button>
                 </div>
             </div>
 
             <div class="image-box">
-                <img src="" width="240px" height="240px">
+                <div class="image">
+                    <img src="" width="240px" height="240px">
+                </div>
+                <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                </button>
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="{{url_for('static', filename='images/x-button.png')}}">
+                        <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
                     </button>
                     <button class="check-button">
-                        <img src="{{url_for('static', filename='images/check-button.png')}}">
+                        <img src="{{url_for('static', filename='images/check-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/check-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/check-button.svg')}}'" width="55px" height="55px">
                     </button>
                 </div>
             </div>
 
             <div class="image-box">
-                <img src="" width="240px" height="240px">
+                <div class="image">
+                    <img src="" width="240px" height="240px">
+                </div>
+                <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                </button>
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="{{url_for('static', filename='images/x-button.png')}}">
+                        <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
                     </button>
                     <button class="check-button">
-                        <img src="{{url_for('static', filename='images/check-button.png')}}">
+                        <img src="{{url_for('static', filename='images/check-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/check-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/check-button.svg')}}'" width="55px" height="55px">
                     </button>
                 </div>
             </div>
 
             <div class="image-box">
-                <img src="" width="240px" height="240px">
+                <div class="image">
+                    <img src="" width="240px" height="240px">
+                </div>
+                <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                </button>
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="{{url_for('static', filename='images/x-button.png')}}">
+                        <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
                     </button>
                     <button class="check-button">
-                        <img src="{{url_for('static', filename='images/check-button.png')}}">
+                        <img src="{{url_for('static', filename='images/check-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/check-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/check-button.svg')}}'" width="55px" height="55px">
                     </button>
                 </div>
             </div>
 
             <div class="image-box">
-                <img src="" width="240px" height="240px">
+                <div class="image">
+                    <img src="" width="240px" height="240px">
+                </div>
+                <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                </button>
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="{{url_for('static', filename='images/x-button.png')}}">
+                        <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
                     </button>
                     <button class="check-button">
-                        <img src="{{url_for('static', filename='images/check-button.png')}}">
+                        <img src="{{url_for('static', filename='images/check-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/check-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/check-button.svg')}}'" width="55px" height="55px">
                     </button>
                 </div>
             </div>
@@ -79,61 +116,86 @@
             <br><br>
 
             <div class="image-box">
-                <img src="" width="240px" height="240px">
+                <div class="image">
+                    <img src="" width="240px" height="240px">
+                </div>
+                <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                </button>
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="{{url_for('static', filename='images/x-button.png')}}">
+                        <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
                     </button>
                     <button class="check-button">
-                        <img src="{{url_for('static', filename='images/check-button.png')}}">
+                        <img src="{{url_for('static', filename='images/check-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/check-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/check-button.svg')}}'" width="55px" height="55px">
                     </button>
                 </div>
             </div>
 
             <div class="image-box">
-                <img src="" width="240px" height="240px">
+                <div class="image">
+                    <img src="" width="240px" height="240px">
+                </div>
+                <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                </button>
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="{{url_for('static', filename='images/x-button.png')}}">
+                        <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
                     </button>
                     <button class="check-button">
-                        <img src="{{url_for('static', filename='images/check-button.png')}}">
+                        <img src="{{url_for('static', filename='images/check-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/check-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/check-button.svg')}}'" width="55px" height="55px">
                     </button>
                 </div>
             </div>
 
             <div class="image-box">
-                <img src="" width="240px" height="240px">
+                <div class="image">
+                    <img src="" width="240px" height="240px">
+                </div>
+                <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                </button>
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="{{url_for('static', filename='images/x-button.png')}}">
+                        <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
                     </button>
                     <button class="check-button">
-                        <img src="{{url_for('static', filename='images/check-button.png')}}">
+                        <img src="{{url_for('static', filename='images/check-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/check-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/check-button.svg')}}'" width="55px" height="55px">
                     </button>
                 </div>
             </div>
 
             <div class="image-box">
-                <img src="" width="240px" height="240px">
+                <div class="image">
+                    <img src="" width="240px" height="240px">
+                </div>
+                <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                </button>
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="{{url_for('static', filename='images/x-button.png')}}">
+                        <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
                     </button>
                     <button class="check-button">
-                        <img src="{{url_for('static', filename='images/check-button.png')}}">
+                        <img src="{{url_for('static', filename='images/check-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/check-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/check-button.svg')}}'" width="55px" height="55px">
                     </button>
                 </div>
             </div>
 
             <div class="image-box">
-                <img src="" width="240px" height="240px">
+                <div class="image">
+                    <img src="" width="240px" height="240px">
+                </div>
+                <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                </button>
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="{{url_for('static', filename='images/x-button.png')}}">
+                        <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
                     </button>
                     <button class="check-button">
-                        <img src="{{url_for('static', filename='images/check-button.png')}}">
+                        <img src="{{url_for('static', filename='images/check-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/check-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/check-button.svg')}}'" width="55px" height="55px">
                     </button>
                 </div>
             </div>
@@ -146,45 +208,50 @@
             <div class="toolbar-rerun">
                 <div class="toolbar">
                     <button class="tools">
-                        <img src="{{url_for('static', filename='images/select-button.png')}}">
+                        <img src="{{url_for('static', filename='images/select-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/select-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/select-button.svg')}}'" width="40px" height="40px">
+                    </button>
+                </div>
+
+                <div class="toolbar" style="margin-left: -5px;">
+                    <button class="tools">
+                        <img src="{{url_for('static', filename='images/pan-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/pan-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/pan-button.svg')}}'" width="40px" height="40px">
+                    </button>
+                </div>
+
+                <div class="toolbar" style="margin-left: 5px">
+                    <button class="tools">
+                        <img src="{{url_for('static', filename='images/zoom-in-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/zoom-in-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/zoom-in-button.svg')}}'" width="40px" height="40px">
                     </button>
                 </div>
 
                 <div class="toolbar">
                     <button class="tools">
-                        <img src="{{url_for('static', filename='images/pan-button.png')}}">
+                        <img src="{{url_for('static', filename='images/zoom-out-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/zoom-out-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/zoom-out-button.svg')}}'" width="40px" height="40px">
                     </button>
                 </div>
 
-                <div class="toolbar">
-                    <button class="tools">
-                        <img src="{{url_for('static', filename='images/zoom-in-button.png')}}">
-                    </button>
-                </div>
+                <a href=image>
+                    <div class="rerun">
+                        <button class="rerun-button">
+                            <b>Rerun</b>
+                        </button>
+                    </div>
+                </a>
+            </div>
 
-                <div class="toolbar">
-                    <button class="tools">
-                        <img src="{{url_for('static', filename='images/zoom-out-button.png')}}">
-                    </button>
-                </div>
+            <br><br>
 
+            <div class="homepage">
                 <!--a href to redirect page to index.html-->
                 <a href=index>
                     <button class="homepage-button">
-                        <b>Homepage</b>
+                        <img src="{{url_for('static', filename='images/home-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/home-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/home-button.svg')}}'" width="50px" height="50px">
+
                     </button>
                 </a>
-
-                <div class="rerun">
-                    <button class="rerun-button">
-                        <b>Rerun</b>
-                    </button>
-                </div>
             </div>
 
-
-
-            <br><br><br>
+            <br>
 
             <div class="bottom-border">
                 
