--- a/Website/static/styles/global-style.css
+++ b/Website/static/styles/global-style.css
@@ -272,3 +272,16 @@ footer{
     background-color: rgb(60, 80, 100);
 }
 
+/* login.html css */
+.input-form-container {
+    text-align: center;
+    background-color: rgba(126, 155, 187, 0.3);
+    margin: 200px auto;
+    width: 450px;
+    border: 2px solid black;
+    background-color: rgba(126, 155, 187, 0.3);
+}
+
+.input-form {
+    margin: 25px 0;
+}
