--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -3,6 +3,7 @@
       <head>
             <title>Home</title>
             <link rel="stylesheet" href="{{ url_for('static',filename='styles/global-style.css') }}">
+            <script src="../../drop_area.js"></script>
       </head>
 
       <body>
@@ -15,12 +16,12 @@
 
 
             <!--File upload area-->
-            <div class="drop-zone">
-                  <span class="drop-zone__text">
-                        Drop file here or click to upload
-                  </span>
-                  <div class="drop-zone__thumb" data-label="userFile.txt"></div>
-                  <input type="file" name="userFile" class="drop-zone__input">
+            <div class="drag-area">
+                  <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
+                  <header>Drag & Drop to Upload File</header>
+                  <span>OR</span>
+                  <button>Browse File</button>
+                  <input type="file" hidden>
             </div>
 
 
