--- a/Website/static/styles/global-style.css
+++ b/Website/static/styles/global-style.css
@@ -158,10 +158,11 @@ body {
     opacity: 0.7;
 }
 
-/* Modal for expanding image upon click */
-.modal {
+
+ /* Modal for expanding image upon click */
+/* .modal {
     background-color: rgba(0, 0, 0, 0.8);
-    display: none;        /* comment out to display for testing */
+    display: none;        
     position: fixed;
     overflow: auto;
     top: 0;
@@ -169,9 +170,9 @@ body {
     width: 100%;
     height: 100%;
     z-index: 1;
-}
+} */
   
-.modal-image {
+/* .modal-image {
     display: block;
     margin: auto;
     width: 60%;
@@ -180,10 +181,10 @@ body {
     -webkit-animation-duration: 0.5s;
     animation-name: zoom;
     animation-duration: 0.5s;
-}
+} */
 
 /* Optional animation */
-@-webkit-keyframes zoom {
+/* @-webkit-keyframes zoom {
     from {
         -webkit-transform: scale(0)
     } 
@@ -213,7 +214,9 @@ body {
 .close:hover { 
     cursor: pointer;
     color: rgb(207, 207, 207);
-}
+} */
+
+
 
 /* Enlarge button appears when hovering over an image, might remove and just enlarge by clicking image? */
 .enlarge-button {
