--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -4,7 +4,7 @@
 
     <head>
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/global-style.css') }}">
-        <script type="text/javascript" src="{{url_for('static', filename='javascript/image.js')}}"></script>  
+        <script src="{{url_for('static', filename='javascript/image.js')}}"></script>  
     </head>
 
     <body>
@@ -30,7 +30,7 @@
 
         <div class="images">
             <div class="image-box">
-                    <img class="image" src="{{url_for('static', filename='images/fish.png')}}" id="image" width="240px" height="240px">
+                    <img class="image" src="{{url_for('static', filename='images/fish.png')}}" id="image1" width="240px" height="240px">
                 <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
@@ -45,7 +45,7 @@
             </div>
 
             <div class="image-box">
-                    <img class="image" src="" id="image" width="240px" height="240px">
+                    <img class="image" src="" id="image2" width="240px" height="240px">
                 <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
                 </button>
@@ -60,7 +60,7 @@
             </div>
 
             <div class="image-box">
-                    <img class="image" src="" id="image" width="240px" height="240px">
+                    <img class="image" src="" id="image3" width="240px" height="240px">
                 <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
                 </button>
@@ -75,7 +75,7 @@
             </div>
 
             <div class="image-box">
-                    <img class="image" src="" id="image" width="240px" height="240px">
+                    <img class="image" src="" id="image4" width="240px" height="240px">
                 <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
                 </button>
@@ -90,7 +90,7 @@
             </div>
 
             <div class="image-box">
-                    <img class="image" src="" id="image" width="240px" height="240px">
+                    <img class="image" src="" id="image5" width="240px" height="240px">
                 <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
                 </button>
@@ -107,7 +107,7 @@
             <br><br>
 
             <div class="image-box">
-                    <img class="image" src="" id="image" width="240px" height="240px">
+                    <img class="image" src="" id="image6" width="240px" height="240px">
                 <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
                 </button>
@@ -122,7 +122,7 @@
             </div>
 
             <div class="image-box">
-                    <img class="image" src="" id="image" width="240px" height="240px">
+                    <img class="image" src="" id="image7" width="240px" height="240px">
                 <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
                 </button>
@@ -137,7 +137,7 @@
             </div>
 
             <div class="image-box">
-                    <img class="image" src="" id="image" width="240px" height="240px">
+                    <img class="image" src="" id="image8" width="240px" height="240px">
                 <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
                 </button>
@@ -152,7 +152,7 @@
             </div>
 
             <div class="image-box">
-                    <img class="image" src="" id="image" width="240px" height="240px">
+                    <img class="image" src="" id="image9" width="240px" height="240px">
                 <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
                 </button>
@@ -167,7 +167,7 @@
             </div>
 
             <div class="image-box">
-                    <img class="image" src="" id="image" width="240px" height="240px">
+                    <img class="image" src="" id="image10" width="240px" height="240px">
                 <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
                 </button>
@@ -185,7 +185,7 @@
 
 
 
-        <div class="modal" id="modal">
+        <!-- <div class="modal" id="modal">
             <span class="close" id="close">
                 &times;
             </span>
@@ -209,7 +209,8 @@
                 </button>
             </div>
 
-        </div>
+        </div> 
+    -->
 
         <br><br><br><br>
 
