--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -31,9 +31,10 @@
         <div class="images">
             <div class="image-box">
                     <img class="image" src="{{url_for('static', filename='images/fish.png')}}" id="image1" width="240px" height="240px">
-                <button class="enlarge-button">
+                <!-- <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
+            -->
                 <div class="x-check">
                     <button class="x-button">
                         <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
@@ -46,9 +47,10 @@
 
             <div class="image-box">
                     <img class="image" src="" id="image2" width="240px" height="240px">
-                <button class="enlarge-button">
-                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                <!-- <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
+            -->
                 <div class="x-check">
                     <button class="x-button">
                         <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
@@ -61,9 +63,10 @@
 
             <div class="image-box">
                     <img class="image" src="" id="image3" width="240px" height="240px">
-                <button class="enlarge-button">
-                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                <!-- <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
+            -->
                 <div class="x-check">
                     <button class="x-button">
                         <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
@@ -76,9 +79,10 @@
 
             <div class="image-box">
                     <img class="image" src="" id="image4" width="240px" height="240px">
-                <button class="enlarge-button">
-                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                <!-- <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
+            -->
                 <div class="x-check">
                     <button class="x-button">
                         <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
@@ -91,9 +95,10 @@
 
             <div class="image-box">
                     <img class="image" src="" id="image5" width="240px" height="240px">
-                <button class="enlarge-button">
-                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                <!-- <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
+            -->
                 <div class="x-check">
                     <button class="x-button">
                         <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
@@ -108,9 +113,10 @@
 
             <div class="image-box">
                     <img class="image" src="" id="image6" width="240px" height="240px">
-                <button class="enlarge-button">
-                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                <!-- <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
+            -->
                 <div class="x-check">
                     <button class="x-button">
                         <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
@@ -123,9 +129,10 @@
 
             <div class="image-box">
                     <img class="image" src="" id="image7" width="240px" height="240px">
-                <button class="enlarge-button">
-                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                <!-- <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
+            -->
                 <div class="x-check">
                     <button class="x-button">
                         <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
@@ -138,9 +145,10 @@
 
             <div class="image-box">
                     <img class="image" src="" id="image8" width="240px" height="240px">
-                <button class="enlarge-button">
-                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                <!-- <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
+            -->
                 <div class="x-check">
                     <button class="x-button">
                         <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
@@ -153,9 +161,10 @@
 
             <div class="image-box">
                     <img class="image" src="" id="image9" width="240px" height="240px">
-                <button class="enlarge-button">
-                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                <!-- <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
+            -->
                 <div class="x-check">
                     <button class="x-button">
                         <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
@@ -168,9 +177,10 @@
 
             <div class="image-box">
                     <img class="image" src="" id="image10" width="240px" height="240px">
-                <button class="enlarge-button">
-                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" width="40px" height="40px">
+                <!-- <button class="enlarge-button">
+                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
+            -->
                 <div class="x-check">
                     <button class="x-button">
                         <img src="{{url_for('static', filename='images/x-button.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/x-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/x-button.svg')}}'" width="55px" height="55px">
