--- a/Website/static/styles/global-style.css
+++ b/Website/static/styles/global-style.css
@@ -158,6 +158,15 @@ body {
     opacity: 0.7;
 }
 
+.image1{
+    display: block;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.image1:hover {
+    opacity: 0.7;
+    cursor: pointer;
+}
 
  /* Modal for expanding image upon click */
 /* .modal {
