--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -29,8 +29,8 @@
 
 
         <div class="images">
-            <div class="image-box">
-                    <img class="image" src="{{url_for('static', filename='images/fish.png')}}" id="image1" width="240px" height="240px">
+            <div class="image-box1">
+                    <img class="image1" src="{{url_for('static', filename='images/fish.png')}}" id="image1" width="240px" height="240px">
                 <!-- <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
