--- a/Website/static/styles/global-style.css
+++ b/Website/static/styles/global-style.css
@@ -158,14 +158,25 @@ body {
     opacity: 0.7;
 }
 
+/*To be removed when functionality is added for all images*/
+.image-box1 {
+    background-color: rgba(126, 155, 187, 0.3);
+    display: inline-block;
+    position: relative;
+    margin-left: 20px;
+    top: 20px;
+    height: 240px;
+    width: 240px;
+}
+
 .image1{
     display: block;
     cursor: pointer;
     transition: 0.3s;
 }
+
 .image1:hover {
     opacity: 0.7;
-    cursor: pointer;
 }
 
  /* Modal for expanding image upon click */
