--- a/Website/static/styles/global-style.css
+++ b/Website/static/styles/global-style.css
@@ -109,6 +109,7 @@ body {
     position: relative;
     display: flex;
     left: 20px;
+    top: 20px;
 }
 
 .rosen-logo {
@@ -442,15 +443,66 @@ footer{
 }
 
 /* login.html css */
+
+.login-title {
+    display: block;
+    position: relative;
+    text-align: center;
+    color: rgb(54, 85, 120);
+    position: relative;
+    top: 20px;
+    padding-bottom: 15px;
+    font-size: 48px;
+}
+
 .input-form-container {
     text-align: center;
     background-color: rgba(126, 155, 187, 0.3);
-    margin: 200px auto;
+    margin: 150px auto;
     width: 450px;
-    border: 2px solid black;
+    border: 2px solid rgb(60, 80, 100);
+    border-radius: 10px;
     background-color: rgba(126, 155, 187, 0.3);
 }
 
 .input-form {
+    color: rgb(60, 80, 100);
     margin: 25px 0;
+    font-size: 20px;
+}
+
+input:-webkit-autofill {
+      -webkit-box-shadow: 0 0 0 1000px white inset;
+}
+
+input:-webkit-autofill::first-line {
+      font-family: Arial;
+      padding: 5px;
+}
+
+.text-box {
+    width: 180px;
+    border: solid;
+    border-color: rgba(60, 80, 100, 0.2);
+    padding: 3px;
+}
+
+::placeholder {
+  font-style: italic;
+}
+
+.login-button {
+    background-color: rgb(54, 85, 120);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    font-size: 18px;
+    width: 70px;
+    height: 30px;
+}
+
+/* Change colour when hovering over the Login Button */
+.login-button:hover {
+    cursor: pointer;
+    background-color: rgb(60, 80, 100);
 }
