--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -10,10 +10,9 @@
     <body>
         
         <div class="top-border">
-            <br>
             <div class="rosen">
                 <a href=index>
-                    <img src="{{url_for('static', filename='images/ROSEN_Logo_White_220.png')}}" id="logo" class="rosen-logo">
+                    <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" class="rosen-logo" width="220px" height="63px">
                 </a>
             </div>
         </div>
