--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -29,8 +29,8 @@
 
 
         <div class="images">
-            <div class="image-box1">
-                    <img class="image1" src="{{url_for('static', filename='images/fish.png')}}" id="image1" width="240px" height="240px">
+            <div class="image-box image-box1">
+                    <img class="image image1" src="{{url_for('static', filename='images/fish.png')}}" id="image1" width="240px" height="240px">
                 <!-- <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
@@ -45,8 +45,8 @@
                 </div>
             </div>
 
-            <div class="image-box">
-                    <img class="image" src="" id="image2" width="240px" height="240px">
+            <div class="image-box image-box2">
+                    <img class="image image2" src="" id="image2" width="240px" height="240px">
                 <!-- <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
@@ -61,8 +61,8 @@
                 </div>
             </div>
 
-            <div class="image-box">
-                    <img class="image" src="" id="image3" width="240px" height="240px">
+            <div class="image-box image-box3">
+                    <img class="image image3" src="" id="image3" width="240px" height="240px">
                 <!-- <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
@@ -77,8 +77,8 @@
                 </div>
             </div>
 
-            <div class="image-box">
-                    <img class="image" src="" id="image4" width="240px" height="240px">
+            <div class="image-box image-box4">
+                    <img class="image image4" src="" id="image4" width="240px" height="240px">
                 <!-- <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
@@ -93,8 +93,8 @@
                 </div>
             </div>
 
-            <div class="image-box">
-                    <img class="image" src="" id="image5" width="240px" height="240px">
+            <div class="image-box image-box5">
+                    <img class="image image5" src="" id="image5" width="240px" height="240px">
                 <!-- <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
@@ -111,8 +111,8 @@
 
             <br><br>
 
-            <div class="image-box">
-                    <img class="image" src="" id="image6" width="240px" height="240px">
+            <div class="image-box image-box6">
+                    <img class="image image6" src="" id="image6" width="240px" height="240px">
                 <!-- <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
@@ -127,8 +127,8 @@
                 </div>
             </div>
 
-            <div class="image-box">
-                    <img class="image" src="" id="image7" width="240px" height="240px">
+            <div class="image-box image-box7">
+                    <img class="image image7" src="" id="image7" width="240px" height="240px">
                 <!-- <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
@@ -143,8 +143,8 @@
                 </div>
             </div>
 
-            <div class="image-box">
-                    <img class="image" src="" id="image8" width="240px" height="240px">
+            <div class="image-box image-box8">
+                    <img class="image image8" src="" id="image8" width="240px" height="240px">
                 <!-- <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
@@ -159,8 +159,8 @@
                 </div>
             </div>
 
-            <div class="image-box">
-                    <img class="image" src="" id="image9" width="240px" height="240px">
+            <div class="image-box image-box9">
+                    <img class="image image9" src="" id="image9" width="240px" height="240px">
                 <!-- <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
@@ -175,8 +175,8 @@
                 </div>
             </div>
 
-            <div class="image-box">
-                    <img class="image" src="" id="image10" width="240px" height="240px">
+            <div class="image-box image-box10">
+                    <img class="image image10" src="" id="image10" width="240px" height="240px">
                 <!-- <button class="enlarge-button">
                     <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
                 </button>
