--- a/Website/static/styles/global-style.css
+++ b/Website/static/styles/global-style.css
@@ -450,42 +450,50 @@ footer{
     text-align: center;
     color: rgb(54, 85, 120);
     position: relative;
-    top: 20px;
-    padding-bottom: 15px;
+    margin: 20px auto;
+    padding-bottom: 60px;
     font-size: 48px;
 }
 
 .input-form-container {
     text-align: center;
     background-color: rgba(126, 155, 187, 0.3);
-    margin: 150px auto;
-    width: 450px;
-    border: 2px solid rgb(60, 80, 100);
-    border-radius: 10px;
-    background-color: rgba(126, 155, 187, 0.3);
+    margin: 120px auto;
+    width: 480px;
+    border: 2px solid rgba(60, 80, 100, 0.8);
+    border-radius: 15px;
 }
 
 .input-form {
     color: rgb(60, 80, 100);
     margin: 25px 0;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 input:-webkit-autofill {
-      -webkit-box-shadow: 0 0 0 1000px white inset;
+    -webkit-box-shadow: 0 0 0 1000px white inset;
 }
 
 input:-webkit-autofill::first-line {
-      font-family: Arial;
-      padding: 5px;
+    color: rgb(60, 80, 100);
+    font-family: Arial;
+    padding: 5px;
 }
 
 .text-box {
+    color: rgb(60, 80, 100);
     width: 180px;
     border: solid;
+    border-radius: 15px;
     border-color: rgba(60, 80, 100, 0.2);
-    padding: 3px;
+    outline: none;
+    padding: 7px;
 }
+
+.text-box:hover {
+    border-color: rgba(60, 80, 100, 0.15);
+    cursor: text;
+  }
 
 ::placeholder {
   font-style: italic;
@@ -495,10 +503,10 @@ input:-webkit-autofill::first-line {
     background-color: rgb(54, 85, 120);
     color: white;
     border: none;
-    border-radius: 10px;
+    border-radius: 15px;
     font-size: 18px;
-    width: 70px;
-    height: 30px;
+    width: 140px;
+    height: 35px;
 }
 
 /* Change colour when hovering over the Login Button */
